<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_tampilan">

    <TextView
        android:id="@+id/tvSelamatDatang"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/selamat"/>
    <TextView
        android:id="@+id/tvTipeMember"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/TipeMember"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvNamaPelangganView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NamaPelangganView"
        />
    <TextView
        android:id="@+id/tvJenisKelaminView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/JenisKelaminView"
        />
    <TextView
        android:id="@+id/tvAlamatPelangganView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AlamatPelangganView" />
    <TextView
        android:id="@+id/tvNamaBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NamaBarangView"/>
    <TextView
        android:id="@+id/tvJumlahBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/JumlahBarangView"/>

    <TextView
        android:id="@+id/tvHargaBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HargaBarangView"/>
    <TextView
        android:id="@+id/tvTotalHargaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TotalHargaView"/>
    <TextView
        android:id="@+id/tvDiscountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DiscView"/>
    <TextView
        android:id="@+id/tvDiscountMemberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DiscMemberView"/>
    <TextView
        android:id="@+id/tvJumlahBayarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/JumlahBayarView"/>
    <TextView
        android:id="@+id/tvPenutup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Penutup"/>
    <Button
        android:id="@+id/btnPrintNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/printNota"
        android:layout_marginTop="20dp"/>

</LinearLayout>